syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.texasthree.proto";

package Round;

// The greeting service definition.
service Command {
    // Sends a greeting
    rpc sendCommand (CommandRequest) returns (CommandReply) {
    }
}

// The request message containing the user's name.
message CommandRequest {
    string name = 1;
    string data = 2;
}

// The response message containing the greetings
message CommandReply {
    int32 retcode = 1;
    string data = 2;
}
